# modelscope-uncertainty-profiler

./: .gitignore  LICENSE  README.md  play.ipynb  pyproject.toml
examples/: cifar10_example.py  regression_example.py
modelscope/: __init__.py  __main__.py  config.py  profiler.py  report.py  utils.py
modelscope/metrics/: __init__.py  calibration.py  classification.py  image_to_image.py  regression.py
modelscope/tasks/: __init__.py  base.py  classification.py  image_to_image.py  regression.py
modelscope/uncertainty/: __init__.py  conformal.py  deterministic.py  mc_dropout.py
modelscope/visualization/: __init__.py  conformal_plots.py  regression_plots.py  reliability.py  risk_coverage.py  uncertainty_plots.py
